--- a/src/nelua/Makefile
+++ b/src/nelua/Makefile
@@ -18,11 +18,11 @@ else
 	NELUA_LDFLAGS += $(LIB_RAYLIB)
 endif
 
-RAYLIB_DIR       = ../../../libs
-RAYLIB_NELUA_DIR =   $(RAYLIB_DIR)/Raylib.nelua
-NELUA_FLAGS     += -L$(RAYLIB_DIR)/Raylib.nelua --cache-dir .neluacache -o $(TARGET)$(EXE)
-NELUA_CFLAGS    += -I$(RAYLIB_DIR)/$(PLATFORM)/raylib/include -O2 -Wl,-s
-NELUA_LDFLAGS   += -lraylib -L$(RAYLIB_DIR)/$(PLATFORM)/raylib/lib
+LIBS_DIR       = ../../../libs
+RAYLIB_NELUA_DIR =   $(LIBS_DIR)/Raylib.nelua
+NELUA_FLAGS     += -L$(LIBS_DIR)/Raylib.nelua --cache-dir .neluacache -o $(TARGET)$(EXE)
+NELUA_CFLAGS    += -I$(LIBS_DIR)/$(PLATFORM)/raylib/include -O2 -Wl,-s
+NELUA_LDFLAGS   += -lraylib -L$(LIBS_DIR)/$(PLATFORM)/raylib/lib
 
 
 all: $(TARGET)$(EXE)
@@ -36,9 +36,9 @@ $(TARGET)$(EXE): $(TARGET).nelua Makefile
 	nelua -r $< $(NELUA_FLAGS) --cflags="$(NELUA_CFLAGS)" --ldflags="$(NELUA_LDFLAGS)"
 ifeq ($(PLATFORM),win)
 ifneq ($(STATIC_LINK_RAYLIB),true)
-	cp -f $(RAYLIB_DIR)/win/raylib/lib/raylib.dll .
+	cp -f $(LIBS_DIR)/$(PLATFORM)/raylib/lib/raylib.dll .
 endif
 endif
 
 run: all
-	./$(TARGET)$(EXE)
+	LD_LIBRARY_PATH=$(LIBS_DIR)/$(PLATFORM)/raylib/lib ./$(TARGET)$(EXE)
