added: C3 and GO examples

--- a/src/c3/Makefile
+++ b/src/c3/Makefile
@@ -1,5 +1,12 @@
 all:
-	@echo
+ifeq ($(OS),Windows_NT)
+	c3c build
+else
+	c3c build -z -lraylib -z -lm
+endif
+
+run: all
+	./build/raywars
 
 clean:
-	@echo
+	@-rm -fr build/
