--- a/src/c3/Makefile
+++ b/src/c3/Makefile
@@ -1,7 +1,9 @@
 all:
+	c3c --version
 ifeq ($(OS),Windows_NT)
 	c3c build
 else
+	#c3c build -z -lraylib55 -z -lm
 	c3c build -z -lraylib -z -lm
 endif
 
@@ -10,3 +12,7 @@ run: all
 
 clean:
 	@-rm -fr build/
+
+update:
+	c3c vendor-fetch raylib
+	c3c vendor-fetch raygui
