--- a/src/c3/Makefile
+++ b/src/c3/Makefile
@@ -1,3 +1,4 @@
+
 all:
 	c3c --version
 ifeq ($(OS),Windows_NT)
@@ -6,12 +7,14 @@ else
 	#c3c build -z -lraylib55 -z -lm
 	c3c build -z -lraylib -z -lm
 endif
+	@-mkdir -p build/resources
+	@cp -f resources/ray.png build/resources/
 
 run: all
-	./build/raywars
+	(cd ./build; ./raywars)
 
 clean:
-	@-rm -fr build/
+	@-rm -fr build/*
 
 update:
 	c3c vendor-fetch raylib
