--- a/src/odin/Makefile
+++ b/src/odin/Makefile
@@ -6,19 +6,20 @@ HIDE_CONSOLE = true
 
 ifeq ($(OS),Windows_NT)
 	EXE = .exe
-	PLATFORM = windows
-  OPT_LIBS += "/LIBPATH:$(LIBS_DIR)/$(PLATFORM)/raylib_msvc/lib raylib.lib"
+	PLATFORM   = windows
+  OPT_LIBS  += /LIBPATH:$(LIBS_DIR)/$(PLATFORM)/raylib_msvc/lib raylib.lib
+	OPT_LIBS  +=  res/ray.res
 	ifeq ($(HIDE_CONSOLE),true)
 		OPT += -subsystem:windows
 	endif
 else
 	PLATFORM = linux
-  OPT_LIBS += "-L$(LIBS_DIR)/$(PLATFORM)/raylib/lib -lraylib"
+  OPT_LIBS += -L$(LIBS_DIR)/$(PLATFORM)/raylib/lib -lraylib
 endif
 
-OPT += -extra-linker-flags:$(OPT_LIBS)
+OPT += -extra-linker-flags:"$(OPT_LIBS)"
 
-all:
+all: resIcon
 	odin build . -out:$(TARGET)$(EXE) $(OPT)
 
 
@@ -27,3 +28,8 @@ run: all
 
 clean:
 	@-rm -f $(TARGET)$(EXE)
+
+resIcon:
+	@-$(MAKE) -C res
+
+MAKEFLAGS += --no-print-directory
